[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "warmup-exporter"
version = "0.0.1"
authors = [
    {name = "Iain Cadd"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "asyncio",
    "prometheus-client",
    "requests",
    "tzdata",
    "warmup4ie"
]
description = "A prometheus exporter module that collects energy monitoring from warmup devices"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/savagemindz/warmup-exporter"
